<resources>
    <string name="app_name">Core Training</string>
    <string name="init_countdown">00:00</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="plusButton">Plus</string>
    <string name="minusButton">Minus</string>
    <string name="init_main_countdown">00:00</string>
    <string name="setTime">Set Countdown</string>
    <string name="menuBack">Back</string>
</resources>
